input my details

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 <body>
   <!-- please fill in the details by replacing !!! and push to GitHub -->
-  <p>Hi, my name is !!!</p>
-  <p>I started studying digital media because I wanted to !!!</p>
-  <p>I spend a lot of time !!!</p>
-  <p>My favourite emoji is : !!!</p>
-  <p>My personal experience with sound is !!!<!-- elaborate as much as you like --></p>
-  <p>I have !!! prior experience working with code !!!<!-- elaborate as much as you like --></p>
+  <p>Hi, my name is Camille.</p>
+  <p>I started studying digital media because I wanted to learn more about ux/ui design.</p>
+  <p>I spend a lot of time listening to music, playing video games, watching tv shows.</p>
+  <p>My favourite emoji is : 💗.</p>
+  <p>My personal experience with sound is listening to music.<!-- elaborate as much as you like --></p>
+  <p>I have litte prior experience working with code like learning the basics of html and css, and a bit of javascript, which i learned in one semester in school.<!-- elaborate as much as you like --></p>
 </body>
 </html>
